--- a/odin-rock-paper-scissors/index.html
+++ b/odin-rock-paper-scissors/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    
+    <h1>Rock-Paper-Scissors game</h1>
+    <label for="action">Choose between rock, paper and scissors:</label>
+    <input type="text" name="action" id="action">
+    <button id="actionButton">Play!</button>
 </body>
 </html>
