added and improved body structure to support dom manipulation

--- a/odin-rock-paper-scissors/index.html
+++ b/odin-rock-paper-scissors/index.html
@@ -12,5 +12,8 @@
     <label for="action">Choose between rock, paper and scissors:</label>
     <input type="text" name="action" id="action">
     <button id="actionButton">Play!</button>
+    <div class="scoreSpace">
+        
+    </div>
 </body>
 </html>
