further modification to body to support DOM manipulation

--- a/odin-rock-paper-scissors/index.html
+++ b/odin-rock-paper-scissors/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h1>Rock-Paper-Scissors game</h1>
-    <label for="action">Choose between rock, paper and scissors:</label>
-    <input type="text" name="action" id="action">
-    <button id="actionButton">Play!</button>
+    <label for="action">Choose between rock, paper and scissors!</label>
+    <ul class="buttonList">
+        <li><button id="rockButton" name="rock">Rock</button></li>
+        <li><button id="paperButton" name="paper">Paper</button></li>
+        <li><button id="scissorsButton" name="scissors">Scissors</button></li>
+    </ul>
     <div class="scoreSpace">
         
     </div>
